--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    // THIS SETTING WORKS AS IT IS DECLARED BEFORE
+    // window.__Zone_disable_requestAnimationFrame = true;
+  </script>
 </head>
 <body>
   <app-root></app-root>
